agrego tarjetas de productos

--- a/index.html
+++ b/index.html
@@ -24,9 +24,71 @@
         <main class="row principal">
             <div class="column">main nico</div>
         </main>
-      
-        <div class="row productos-destacados/ofertas">
-            <div class="column">productos-destacados/ofertas Jona</div>
+        <div class="row productos-destacados-ofertas">
+            <section class="productos">
+                <h3>Productos Destacados</h3>
+                <div class="row">
+                    <div class="column">
+                        <img src="img/productos/fideos.jpg" alt="Imagen de producto 1">
+                        <h3>Fideos</h3>
+                        <p>1/2 kg. - 3 Porciones.</p>
+                        <div class="contenedor-botones">
+                            <button class="boton">
+                              <span class="icono">Comprar</span>
+                            </button>
+                            <button class="boton-detalle">
+                              <span class="icono">Detalles</span>
+                            </button>
+                        </div>
+                    </div>                
+                    <div class="column">
+                        <img src="img/productos/noquis.jpg" alt="img">
+                        <h3>Ñoquis</h3>
+                        <p>1/2 kg. - 3 Porciones.</p>
+                        <div class="contenedor-botones">
+                            <button class="boton">
+                              <span class="icono">Comprar</span>
+                            </button>
+                            <button class="boton-detalle">
+                              <span class="icono">Detalles</span>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <img src="img/productos/ravioles.jpg" alt="img">
+                        <h3>Ravioles</h3>
+                        <p>16 Uni. - 2 Porciones.</p>
+                        <div class="contenedor-botones">
+                            <button class="boton">
+                              <span class="icono">Comprar</span>
+                            </button>
+                            <button class="boton-detalle">
+                              <span class="icono">Detalles</span>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <img src="img/productos/sorrentinos.jpg" alt="img">
+                        <h3>Sorrentinos</h3>
+                        <p>16 Uni. - 2 Porciones.</p>
+                        <div class="contenedor-botones">
+                            <button class="boton">
+                              <span class="icono">Comprar</span>
+                            </button>
+                            <button class="boton-detalle">
+                              <span class="icono">Detalles</span>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="column ver-todos-column">
+                      <div class="contenido-ver-todos">
+                          <h3>Ver Todos los Productos</h3>
+                          <p>Descubre nuestra colección completa de pastas frescas.</p>
+                          <a href="#" class="boton-ver-todos">Explorar Catálogo</a>
+                      </div>
+                  </div>
+                </div>
+            </section> 
         </div>
 
         <div class="row nosotros">
