--- a/index.html
+++ b/index.html
@@ -15,15 +15,33 @@
 </head>
 <body>
     <div class="contenedora">
-
+        <!-- navbar de octavio -->
         <header class="row navbar">
-            <div class="column column-60">octavio navbar menu pricipal</div>
-            <div class="column">octavio navbar cuenta/sesion</div>
+            <nav class="navbar-main">
+                <a class="navbar-logo">
+                    <img src="img/pastalogo.png" alt="logo" width="50px">
+                </a>
+                <button class="menu-toggle">☰</button>
+                <div class="navbar-content">
+                    <ul class="navbar-menu navbar-menu-left">
+                        <li><a href="menu.html">Inicio</a></li>
+                        <li><a href="nosotros.html">Nosotros</a></li>
+                        <li><a href="productos.html">Productos</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
+                    </ul>
+                    <ul class="navbar-menu navbar-menu-right">
+                        <li><a href="inicio_de_secion.html"><i class="fas fa-sign-in-alt"></i> Iniciar Sesión</a></li>
+                        <li><a href="registro.html"><i class="fas fa-user-plus"></i> Crear Cuenta</a></li>
+                        <li><a href="#"><i class="fas fa-shopping-cart"></i> 0 - $0,00</a></li>
+                    </ul>
+                </div>
+            </nav>
         </header>
 
         <main class="row principal">
             <div class="column">main nico</div>
         </main>
+        <!-- productos de joni -->
         <div class="row productos-destacados-ofertas">
             <section class="productos">
                 <h3>Productos Destacados</h3>
@@ -95,16 +113,42 @@
             <div class="column"> sobre nosotros rodo</div>
         </div>
 
-        <footer class="row">
-            <div class="column column-20 logo">octavio footer logo</div>
-            <div class="column pastas-artesanales">octavio footer pastas artesanales</div>
-            <div class="column visitanos">octavio footer visitanos</div>
-            <div class="column comunicate">octavio footer comunicate</div>
+        <!-- footer octavio -->
+        <footer class="footer-main row">
+            <div class="footer-container">
+                <div class="footer-content">
+                    <div class="footer-section">
+                        <img src="img/pastalogo.png" alt="El Rincon del Sorrentino" class="footer-logo">
+                    </div>
+                    <div class="footer-section">
+                        <h3>Pastas Artesanales</h3>
+                        <p>Calidad y prestigio desde 1943.<br>Gracias por su visita</p>
+                    </div>
+                    <div class="footer-section">
+                        <h3>Visítanos</h3>
+                        <p>Av. Alberdi 1051<br>Río Cuarto / Cordoba / Argentina</p>
+                    </div>
+                    <div class="footer-section">
+                        <h3>Comunícate</h3>
+                        <p>(0358)-4249046<br>info@elrincondelsorrentino.com.ar</p>
+                    </div>
+                </div>    
+                    <div class="footer-bottom">
+                        <p>© 2024 - El Rincon del Sorrentino</p>
+                    </div>    
+            </div>
         </footer>
-        <div class="row derechos-reservados">
-            <div class="column">octavio footer derechos reservados</div>
-        </div>
-      
     </div>   
 </body>
+
+    <script>
+       document.addEventListener('DOMContentLoaded', () => {
+            const toggleButton = document.querySelector('.menu-toggle');
+            const navbarMenu = document.querySelector('.navbar-menu');
+
+            toggleButton.addEventListener('click', () => {
+                navbarMenu.classList.toggle('active');
+            });
+        });
+    </script> 
 </html>
