--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
             </div>
         </header>
         <main class="row principal">
-            <div class="column">main nico</div>
+            <section class="overlay">
+                <h1>El Rincón del Sorrentino</h1>
+                <h3>PASTAS ARTESANALES</h3>
+            </section>
         </main>
         <!-- productos de joni -->
         <div class="row productos-destacados-ofertas">
