--- a/index.html
+++ b/index.html
@@ -125,8 +125,72 @@
             </section> 
         </div>
 
+        <div class="linea-divisoria"></div>
+
         <div class="row nosotros">
-            <div class="column"> sobre nosotros rodo</div>
+            <div class="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item">
+                        <img src="img/nosotros7.jpg" alt="Imagen 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/nosotros8.jpg" alt="Imagen 2">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/nosotros3.jpg" alt="Imagen 3">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/nosotros4.jpg" alt="Imagen 3">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/nosotros5.jpg" alt="Imagen 3">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/nosotros6.jpg" alt="Imagen 3">
+                    </div>
+                </div>
+                <div class="carousel-controls">
+                    <button class="prev">&#10094;</button>
+                    <button class="next">&#10095;</button>
+                </div>
+                            
+            </div>
+            <div class="nosotros-texto">
+                <h2><strong>Sobre Nosotros</strong></h2>
+                <h5>
+                    Bienvenidos El Rincón del Sorrentino, una empresa familiar con más de 50 años de tradición en la elaboración de las mejores pastas artesanales. Fundada en 1970 por Giovanni Rossi, un apasionado chef italiano, nuestra fábrica comenzó como un pequeño taller en el corazón de la ciudad, con el sueño de traer los auténticos sabores de Italia a nuestras mesas locales.
+                    A lo largo de las décadas, hemos crecido y evolucionado, pero nuestra esencia permanece intacta: mantener la calidad y la autenticidad en cada uno de nuestros productos. Utilizamos recetas tradicionales, ingredientes seleccionados y procesos artesanales que han pasado de generación en generación, asegurando que cada bocado de nuestras pastas sea una experiencia única y deliciosa.
+                </h5>
+            </div>  
+        </div>
+
+        <div class="linea-divisoria"></div>
+
+        <div class="row meta">
+            <div class="column">
+                <h2><strong>Nuestras Metas</strong></h2>
+                <h5>
+                    En Pastas "El Rincón del Sorrentino", nuestra principal meta es ser reconocidos como la fábrica de pastas líder en calidad y sabor en toda la región. Nos esforzamos por mantener la tradición y autenticidad de nuestras recetas italianas, mientras innovamos constantemente para ofrecer productos frescos y variados que satisfagan los paladares de nuestros clientes. Aspiramos a expandir nuestra presencia en el mercado, llegando a más hogares y restaurantes, siempre con un compromiso firme con la excelencia y la satisfacción del cliente.
+                </h5>
+
+            </div>
+            <div class="column">
+                <img src="img/metas1.avif" alt="Imagen 1">
+            </div>
+        </div>
+
+        <div class="linea-divisoria"></div>
+
+        <div class="row objetivo">
+            <div class="column">
+                <img src="img/objetivos1.png" alt="Imagen 1">
+            </div>
+            <div class="column">
+                <h2><strong>Nuestros Objetivos</strong></h2>
+                <h5>
+                    Nos enfocamos en mantener la calidad de nuestras pastas artesanales, innovar con nuevos productos y expandir nuestra presencia en el mercado. Implementamos prácticas sostenibles y fortalecemos nuestras relaciones con proveedores para asegurar ingredientes frescos y de alta calidad. Además, nos comprometemos a brindar una excelente experiencia al cliente y a motivar a nuestro equipo, asegurando así que cada bocado de nuestras pastas sea una experiencia única y deliciosa.
+                </h5>
+            </div>
         </div>
 
         <!-- footer octavio -->
@@ -153,15 +217,6 @@
             </div>
         </footer>
     </div>
-    <script>
-        document.getElementById('menu-toggle').addEventListener('click', function() {
-            var menu = document.getElementById('menu');
-            if (menu.style.display === 'block') {
-                menu.style.display = 'none';
-            } else {
-                menu.style.display = 'block';
-            }
-        });
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
