--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
                     Bienvenidos El Rincón del Sorrentino, una empresa familiar con más de 50 años de tradición en la elaboración de las mejores pastas artesanales. Fundada en 1970 por Giovanni Rossi, un apasionado chef italiano, nuestra fábrica comenzó como un pequeño taller en el corazón de la ciudad, con el sueño de traer los auténticos sabores de Italia a nuestras mesas locales.
                     A lo largo de las décadas, hemos crecido y evolucionado, pero nuestra esencia permanece intacta: mantener la calidad y la autenticidad en cada uno de nuestros productos. Utilizamos recetas tradicionales, ingredientes seleccionados y procesos artesanales que han pasado de generación en generación, asegurando que cada bocado de nuestras pastas sea una experiencia única y deliciosa.
                 </h5>
-                <button class="boton-conocemas">
+                <button class="boton-conocemas" onclick="location.href='/nosotros.html';">
                     <span class="icono">Conocé Más...</span>
-                </div>
+                </button>
             </div>  
         </div>
 
