--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
                         <p>1/2 kg. - 3 Porciones.</p>
                         <div class="contenedor-botones">
                             <button class="boton">
-                              <span class="icono">Comprar</span>
+                                <span class="icono">Agregar al carrito</span>
                             </button>
-                            <button class="boton-detalle">
-                              <span class="icono">Detalles</span>
-                            </button>
+                            <div class="formulario-cantidad">
+                                <input type="number" min="1" value="1" class="input-cantidad">
+                            </div>
                         </div>
                     </div>
                     <div class="column">
@@ -82,11 +82,12 @@
                         <p>1/2 kg. - 3 Porciones.</p>
                         <div class="contenedor-botones">
                             <button class="boton">
-                              <span class="icono">Comprar</span>
+                              <span class="icono">Agregar al carrito</span>
                             </button>
-                            <button class="boton-detalle">
-                              <span class="icono">Detalles</span>
+                            <div class="formulario-cantidad">
+                                <input type="number" min="1" value="1" class="input-cantidad">
                             </div>
+                        </div>
                     </div>
                     <div class="column">
                         <img src="img/productos/ravioles.jpg" alt="img">
@@ -94,11 +95,11 @@
                         <p>16 Uni. - 2 Porciones.</p>
                         <div class="contenedor-botones">
                             <button class="boton">
-                              <span class="icono">Comprar</span>
+                              <span class="icono">Agregar al carrito</span>
                             </button>
-                            <button class="boton-detalle">
-                              <span class="icono">Detalles</span>
-                            </button>
+                            <div class="formulario-cantidad">
+                                <input type="number" min="1" value="1" class="input-cantidad">
+                            </div>
                         </div>
                     </div>
                     <div class="column">
@@ -107,11 +108,11 @@
                         <p>16 Uni. - 2 Porciones.</p>
                         <div class="contenedor-botones">
                             <button class="boton">
-                              <span class="icono">Comprar</span>
+                              <span class="icono">Agregar al carrito</span>
                             </button>
-                            <button class="boton-detalle">
-                              <span class="icono">Detalles</span>
-                            </button>
+                            <div class="formulario-cantidad">
+                                <input type="number" min="1" value="1" class="input-cantidad">
+                            </div>
                         </div>
                     </div>
                     <div class="column ver-todos-column">
