--- a/index.html
+++ b/index.html
@@ -125,6 +125,76 @@
                 </div>
             </section> 
         </div>
+        <div class="row promociones-destacados-ofertas">
+            <section class="promociones">
+                <h3>Promociones</h3>
+                <div class="row">
+                    <div class="column">
+                        <img src="img/productos/fideo_salsa.jpg" alt="Imagen de producto 1">
+                        <h3>Fideos + Salsa a eleccion</h3>
+                        <p>1/2 kg fideos + </p>
+                        <p>Bolognesa o Tomate o Pesto o Cuatro quesos</p>
+                        <div class="contenedor-botones">
+                            <button class="boton">
+                                <span class="icono">Agregar al carrito</span>
+                            </button>
+                            <div class="formulario-cantidad">
+                                <input type="number" min="1" value="1" class="input-cantidad">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <img src="img/productos/noquis_salsa.jpg" alt="img">
+                        <h3>Ñoquis + Salsa a eleccion</h3>
+                        <p>1/2 kg Ñoquis + </p>
+                        <p>Bolognesa o Tomate o Pesto o Cuatro quesos</p>
+                        <div class="contenedor-botones">
+                            <button class="boton">
+                              <span class="icono">Agregar al carrito</span>
+                            </button>
+                            <div class="formulario-cantidad">
+                                <input type="number" min="1" value="1" class="input-cantidad">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <img src="img/productos/ravioles_salsa.jpg" alt="img">
+                        <h3>Ravioles + Salsa a eleccion</h3>
+                        <p>8 u.(2 Porciones) Ravioles + </p>
+                        <p>Bolognesa o Tomate o Pesto o Cuatro quesos</p>
+                        <div class="contenedor-botones">
+                            <button class="boton">
+                              <span class="icono">Agregar al carrito</span>
+                            </button>
+                            <div class="formulario-cantidad">
+                                <input type="number" min="1" value="1" class="input-cantidad">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <img src="img/productos/sorrentinos_salsa.jpg" alt="img">
+                        <h3>Sorrentinos + Salsa a eleccion</h3>
+                        <p>8 u.(2 Porciones) Sorrentinos + </p>
+                        <p>Bolognesa o Tomate o Pesto o Cuatro quesos</p>
+                        <div class="contenedor-botones">
+                            <button class="boton">
+                              <span class="icono">Agregar al carrito</span>
+                            </button>
+                            <div class="formulario-cantidad">
+                                <input type="number" min="1" value="1" class="input-cantidad">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column ver-todos-column">
+                        <div class="contenido-ver-todos">
+                            <h3>Ver Todas las Promociones</h3>
+                            <p>Descubre nuestras promociones especiales.</p>
+                            <a href="#" class="boton-ver-todos">Explorar Promociones</a>
+                        </div>
+                    </div>
+                </div>
+            </section> 
+        </div>        
 
         <div class="linea-divisoria"></div>
 
