Agregue las redes sociales en el footer

--- a/index.html
+++ b/index.html
@@ -204,7 +204,16 @@
                 </div>
                 <div class="footer-section">
                     <h3>Pastas Artesanales</h3>
-                    <p>Calidad y prestigio desde 1943...<br>Gracias por su visita</p>
+                    <p>Calidad y prestigio desde 1943.<br>Gracias por su visita</p>
+                </div>
+                <div class="footer-section">
+                    <h3>Redes Sociales</h3>
+                    <p>
+                        <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i><a>
+                        <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a>
+                    </p>
                 </div>
                 <div class="footer-section">
                     <h3>Visítanos</h3>
