creo productos.html

--- a/productos.html
+++ b/productos.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="css/nico.css">
     <link rel="stylesheet" href="css/jona_productos.css">
     <link rel="stylesheet" href="css/victorio.css">
+    <style>
+
+    </style>
 </head>
 <body>
     <div class="contenedora">
@@ -27,11 +30,11 @@
                         <i class="fas fa-bars"></i>
                     </button>
                     <ul class="menu" id="menu">
-                        <li><a href="#">Inicio</a></li>
-                        <li><a href="#">Nosotros</a></li>
-                        <li><a href="#">Productos</a></li>
-                        <li><a href="#">Promos</a></li>
-                        <li><a href="#">Contacto</a></li>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="nosotros.html">Nosotros</a></li>
+                        <li><a href="productos.html">Productos</a></li>
+                        <li><a href="promos.html">Promos</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
             </div>
@@ -59,100 +62,180 @@
             </section>
         </main>
         <!-- productos de joni -->
-        <h1 class="titulo-productos">Pastas Caseras</h1>
-        <div class="productos-container">
-            <div class="producto-card">
-                <img src="img/productos/fideos.jpg" alt="Imagen de producto 1">
-                <h3>Fideos</h3>
-                <p>1/2 kg. - 3 Porciones.</p>
-                <div class="contenedor-botones">
-                    <button class="boton">Agregar al carrito</button>
-                    <div class="formulario-cantidad">
-                        <input type="number" min="1" value="1" class="input-cantidad">
-                    </div>
+        <div class="row full-width">
+            <div class="column column-50">
+                <div class="row productos-destacados-ofertas">
+                    <section class="productos">
+                        <h2>Pastas Caseras</h2>
+                        <div class="row">
+                            <div class="column">
+                                <img src="img/productos/fideos.jpg" alt="Imagen de producto 1">
+                                <h3><b>Fideos</b></h3>
+                                <p>1/2 kg. - 3 Porciones.</p>
+                                <h2><b>$ 1300</b></h2>
+                                <div class="contenedor-botones">
+                                    <button class="boton">
+                                        <span class="icono">Agregar al carrito</span>
+                                    </button>
+                                    <div class="formulario-cantidad">
+                                        <input type="number" min="1" value="1" class="input-cantidad">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="column">
+                                <img src="img/productos/noquis.jpg" alt="img">
+                                <h3>Ñoquis</h3>
+                                <p>1/2 kg. - 3 Porciones.</p>
+                                <h2><b>$ 1300</b></h2>
+                                <div class="contenedor-botones">
+                                    <button class="boton">
+                                      <span class="icono">Agregar al carrito</span>
+                                    </button>
+                                    <div class="formulario-cantidad">
+                                        <input type="number" min="1" value="1" class="input-cantidad">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="column">
+                                <img src="img/productos/ravioles.jpg" alt="img">
+                                <h3><b></b>Ravioles</h3>
+                                <p>16 Uni. - 2 Porciones.</p>
+                                <h2><b>$ 1300</b></h2>
+                                <div class="contenedor-botones">
+                                    <button class="boton">
+                                      <span class="icono">Agregar al carrito</span>
+                                    </button>
+                                    <div class="formulario-cantidad">
+                                        <input type="number" min="1" value="1" class="input-cantidad">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="column">
+                                <img src="img/productos/capelleti.jpg" alt="img">
+                                <h3>Capellettis</h3>
+                                <p>16 Uni. - 2 Porciones.</p>
+                                <h2><b>$ 1300</b></h2>
+                                <div class="contenedor-botones">
+                                    <button class="boton">
+                                      <span class="icono">Agregar al carrito</span>
+                                    </button>
+                                    <div class="formulario-cantidad">
+                                        <input type="number" min="1" value="1" class="input-cantidad">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="column">
+                                <img src="img/productos/pansotis.jpg" alt="img">
+                                <h3>Pansotis</h3>
+                                <p>16 Uni. - 2 Porciones.</p>
+                                <h2><b>$ 1300</b></h2>
+                                <div class="contenedor-botones">
+                                    <button class="boton">
+                                      <span class="icono">Agregar al carrito</span>
+                                    </button>
+                                    <div class="formulario-cantidad">
+                                        <input type="number" min="1" value="1" class="input-cantidad">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="column">
+                                <img src="img/productos/sorrentinos.jpg" alt="img">
+                                <h3>Sorrentinos</h3>
+                                <p>16 Uni. - 2 Porciones.</p>
+                                <h2><b>$ 1300</b></h2>
+                                <div class="contenedor-botones">
+                                    <button class="boton">
+                                      <span class="icono">Agregar al carrito</span>
+                                    </button>
+                                    <div class="formulario-cantidad">
+                                        <input type="number" min="1" value="1" class="input-cantidad">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section> 
                 </div>
             </div>
-            <div class="producto-card">
-                <img src="img/productos/noquis.jpg" alt="Imagen de producto 2">
-                <h3>Ñoquis</h3>
-                <p>1/2 kg. - 3 Porciones.</p>
-                <div class="contenedor-botones">
-                    <button class="boton">Agregar al carrito</button>
-                    <div class="formulario-cantidad">
-                        <input type="number" min="1" value="1" class="input-cantidad">
-                    </div>
+            <div class="column column-50">     
+                <div class="row productos-destacados-ofertas">
+                    <section class="productos">
+                        <h2>Salsas</h2>
+                        <div class="row">
+                            <div class="column">
+                                <img src="img/productos/bolognesa.jpg" alt="Imagen de producto 1">
+                                <h3>Bolognesa</h3>
+                                <p>200 gr. - p/ 3 Porciones.</p>
+                                <h2><b>$ 1300</b></h2>
+                                <div class="contenedor-botones">
+                                    <button class="boton">
+                                        <span class="icono">Agregar al carrito</span>
+                                    </button>
+                                    <div class="formulario-cantidad">
+                                        <input type="number" min="1" value="1" class="input-cantidad">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="column">
+                                <img src="img/productos/campi.jpg" alt="img">
+                                <h3>Champiñones</h3>
+                                <p>200 gr. - p/ 3 Porciones.</p>
+                                <h2><b>$ 1300</b></h2>
+                                <div class="contenedor-botones">
+                                    <button class="boton">
+                                      <span class="icono">Agregar al carrito</span>
+                                    </button>
+                                    <div class="formulario-cantidad">
+                                        <input type="number" min="1" value="1" class="input-cantidad">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="column">
+                                <img src="img/productos/pesto.jpg" alt="img">
+                                <h3>Pesto</h3>
+                                <p>200 gr. - p/ 3 Porciones.</p>
+                                <h2><b>$ 1300</b></h2>
+                                <div class="contenedor-botones">
+                                    <button class="boton">
+                                      <span class="icono">Agregar al carrito</span>
+                                    </button>
+                                    <div class="formulario-cantidad">
+                                        <input type="number" min="1" value="1" class="input-cantidad">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="column">
+                                <img src="img/productos/tomate.jpg" alt="img">
+                                <h3>Tomate</h3>
+                                <p>200 gr. - p/ 3 Porciones.</p>
+                                <h2><b>$ 1300</b></h2>
+                                <div class="contenedor-botones">
+                                    <button class="boton">
+                                      <span class="icono">Agregar al carrito</span>
+                                    </button>
+                                    <div class="formulario-cantidad">
+                                        <input type="number" min="1" value="1" class="input-cantidad">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="column">
+                                <img src="img/productos/verdeo.jpg" alt="img">
+                                <h3>Verdeo</h3>
+                                <p>200 gr. - p/ 3 Porciones.</p>
+                                <h2><b>$ 1300</b></h2>
+                                <div class="contenedor-botones">
+                                    <button class="boton">
+                                      <span class="icono">Agregar al carrito</span>
+                                    </button>
+                                    <div class="formulario-cantidad">
+                                        <input type="number" min="1" value="1" class="input-cantidad">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section> 
                 </div>
             </div>
-            <div class="producto-card">
-                <img src="img/productos/ravioles.jpg" alt="Imagen de producto 3">
-                <h3>Ravioles</h3>
-                <p>16 Uni. - 2 Porciones.</p>
-                <div class="contenedor-botones">
-                    <button class="boton">Agregar al carrito</button>
-                    <div class="formulario-cantidad">
-                        <input type="number" min="1" value="1" class="input-cantidad">
-                    </div>
-                </div>
-            </div>
-            <div class="producto-card">
-                <img src="img/productos/sorrentinos.jpg" alt="Imagen de producto 3">
-                <h3>Ravioles</h3>
-                <p>16 Uni. - 2 Porciones.</p>
-                <div class="contenedor-botones">
-                    <button class="boton">Agregar al carrito</button>
-                    <div class="formulario-cantidad">
-                        <input type="number" min="1" value="1" class="input-cantidad">
-                    </div>
-                </div>
-            </div>
-        </div>      
-        <h1 class="titulo-productos">Salsas</h1>
-        <div class="productos-container">
-            <div class="producto-card">
-                <img src="img/productos/fideo_salsa.jpg" alt="Imagen de producto 1">
-                <h3>Fideos</h3>
-                <p>1/2 kg. - 3 Porciones.</p>
-                <div class="contenedor-botones">
-                    <button class="boton">Agregar al carrito</button>
-                    <div class="formulario-cantidad">
-                        <input type="number" min="1" value="1" class="input-cantidad">
-                    </div>
-                </div>
-            </div>
-            <div class="producto-card">
-                <img src="img/productos/noquis_salsa.jpg" alt="Imagen de producto 2">
-                <h3>Ñoquis</h3>
-                <p>1/2 kg. - 3 Porciones.</p>
-                <div class="contenedor-botones">
-                    <button class="boton">Agregar al carrito</button>
-                    <div class="formulario-cantidad">
-                        <input type="number" min="1" value="1" class="input-cantidad">
-                    </div>
-                </div>
-            </div>
-            <div class="producto-card">
-                <img src="img/productos/ravioles_salsa.jpg" alt="Imagen de producto 3">
-                <h3>Ravioles</h3>
-                <p>16 Uni. - 2 Porciones.</p>
-                <div class="contenedor-botones">
-                    <button class="boton">Agregar al carrito</button>
-                    <div class="formulario-cantidad">
-                        <input type="number" min="1" value="1" class="input-cantidad">
-                    </div>
-                </div>
-            </div>
-            <div class="producto-card">
-                <img src="img/productos/sorrentinos_salsa.jpg" alt="Imagen de producto 3">
-                <h3>Ravioles</h3>
-                <p>16 Uni. - 2 Porciones.</p>
-                <div class="contenedor-botones">
-                    <button class="boton">Agregar al carrito</button>
-                    <div class="formulario-cantidad">
-                        <input type="number" min="1" value="1" class="input-cantidad">
-                    </div>
-                </div>
-            </div>
-        </div>       
+        </div>
         <!-- footer octavio -->
         <footer class="footer">
             <div class="footer-container">
