--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/nico.css">
     <link rel="stylesheet" href="css/jona.css">
     <link rel="stylesheet" href="css/victorio.css">
+    
 </head>
 <body>
     <div class="contenedora">
@@ -59,7 +60,7 @@
             </section>
         </main>
         <!-- productos de joni -->
-        <div class="row productos-destacados-ofertas">
+        <div class="row productos-destacados">
             <section class="productos">
                 <h3>Productos Destacados</h3>
                 <div class="row">
@@ -67,6 +68,7 @@
                         <img src="img/productos/fideos.jpg" alt="Imagen de producto 1">
                         <h3>Fideos</h3>
                         <p>1/2 kg. - 3 Porciones.</p>
+                        <h2><b>$ 1300</b></h2>
                         <div class="contenedor-botones">
                             <button class="boton">
                                 <span class="icono">Agregar al carrito</span>
@@ -80,6 +82,7 @@
                         <img src="img/productos/noquis.jpg" alt="img">
                         <h3>Ñoquis</h3>
                         <p>1/2 kg. - 3 Porciones.</p>
+                        <h2><b>$ 1300</b></h2>
                         <div class="contenedor-botones">
                             <button class="boton">
                               <span class="icono">Agregar al carrito</span>
@@ -92,20 +95,8 @@
                     <div class="column">
                         <img src="img/productos/ravioles.jpg" alt="img">
                         <h3>Ravioles</h3>
-                        <p>16 Uni. - 2 Porciones.</p>
-                        <div class="contenedor-botones">
-                            <button class="boton">
-                              <span class="icono">Agregar al carrito</span>
-                            </button>
-                            <div class="formulario-cantidad">
-                                <input type="number" min="1" value="1" class="input-cantidad">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="column">
-                        <img src="img/productos/sorrentinos.jpg" alt="img">
-                        <h3>Sorrentinos</h3>
-                        <p>16 Uni. - 2 Porciones.</p>
+                        <p>1/2 kg. - 3 Porciones.</p>
+                        <h2><b>$ 1300</b></h2>
                         <div class="contenedor-botones">
                             <button class="boton">
                               <span class="icono">Agregar al carrito</span>
@@ -119,21 +110,22 @@
                       <div class="contenido-ver-todos">
                           <h3>Ver Todos los Productos</h3>
                           <p>Descubre nuestra colección completa de pastas frescas.</p>
-                          <a href="#" class="boton-ver-todos">Explorar Catálogo</a>
+                          <a href="productos.html" class="boton-ver-todos">Explorar Catálogo</a>
                       </div>
                   </div>
                 </div>
             </section> 
         </div>
-        <div class="row promociones-destacados-ofertas">
-            <section class="promociones">
-                <h3>Promociones</h3>
+        <div class="row productos-destacados-ofertas">
+            <section class="productos">
+                <h3>Combos</h3>
                 <div class="row">
                     <div class="column">
-                        <img src="img/productos/fideo_salsa.jpg" alt="Imagen de producto 1">
+                        <img src="img/productos/fideos.jpg" alt="Imagen de producto 1">
                         <h3>Fideos + Salsa a eleccion</h3>
-                        <p>1/2 kg fideos + </p>
-                        <p>Bolognesa o Tomate o Pesto o Cuatro quesos</p>
+                        <p>1/2 kg. - 3 Porciones.</p>
+                        <p>Bolognesa / Champiñones / Pesto / Tomate / Verdeo</p>
+                        <h2><b>$ 1300</b></h2>
                         <div class="contenedor-botones">
                             <button class="boton">
                                 <span class="icono">Agregar al carrito</span>
@@ -144,10 +136,11 @@
                         </div>
                     </div>
                     <div class="column">
-                        <img src="img/productos/noquis_salsa.jpg" alt="img">
+                        <img src="img/productos/noquis.jpg" alt="img">
                         <h3>Ñoquis + Salsa a eleccion</h3>
-                        <p>1/2 kg Ñoquis + </p>
-                        <p>Bolognesa o Tomate o Pesto o Cuatro quesos</p>
+                        <p>1/2 kg. - 3 Porciones.</p>
+                        <p>Bolognesa / Champiñones / Pesto / Tomate / Verdeo</p>
+                        <h2><b>$ 1300</b></h2>
                         <div class="contenedor-botones">
                             <button class="boton">
                               <span class="icono">Agregar al carrito</span>
@@ -158,24 +151,11 @@
                         </div>
                     </div>
                     <div class="column">
-                        <img src="img/productos/ravioles_salsa.jpg" alt="img">
+                        <img src="img/productos/ravioles.jpg" alt="img">
                         <h3>Ravioles + Salsa a eleccion</h3>
-                        <p>8 u.(2 Porciones) Ravioles + </p>
-                        <p>Bolognesa o Tomate o Pesto o Cuatro quesos</p>
-                        <div class="contenedor-botones">
-                            <button class="boton">
-                              <span class="icono">Agregar al carrito</span>
-                            </button>
-                            <div class="formulario-cantidad">
-                                <input type="number" min="1" value="1" class="input-cantidad">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="column">
-                        <img src="img/productos/sorrentinos_salsa.jpg" alt="img">
-                        <h3>Sorrentinos + Salsa a eleccion</h3>
-                        <p>8 u.(2 Porciones) Sorrentinos + </p>
-                        <p>Bolognesa o Tomate o Pesto o Cuatro quesos</p>
+                        <p>1/2 kg. - 3 Porciones.</p>
+                        <p>Bolognesa / Champiñones / Pesto / Tomate / Verdeo</p>
+                        <h2><b>$ 1300</b></h2>
                         <div class="contenedor-botones">
                             <button class="boton">
                               <span class="icono">Agregar al carrito</span>
@@ -186,15 +166,15 @@
                         </div>
                     </div>
                     <div class="column ver-todos-column">
-                        <div class="contenido-ver-todos">
-                            <h3>Ver Todas las Promociones</h3>
-                            <p>Descubre nuestras promociones especiales.</p>
-                            <a href="#" class="boton-ver-todos">Explorar Promociones</a>
-                        </div>
-                    </div>
+                      <div class="contenido-ver-todos">
+                          <h3>Ver Todos los Productos</h3>
+                          <p>Descubre nuestra colección completa de pastas frescas.</p>
+                          <a href="productos.html" class="boton-ver-todos">Explorar Catálogo</a>
+                      </div>
+                  </div>
                 </div>
             </section> 
-        </div>        
+        </div>
 
         <div class="linea-divisoria"></div>
 
