--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <h3>Combos</h3>
                 <div class="row">
                     <div class="column">
-                        <img src="img/productos/fideos.jpg" alt="Imagen de producto 1">
+                        <img src="img/productos/fideo_salsa.jpg" alt="Imagen de producto 1">
                         <h3>Fideos + Salsa a eleccion</h3>
                         <p>1/2 kg. - 3 Porciones.</p>
                         <p>Bolognesa / Champiñones / Pesto / Tomate / Verdeo</p>
@@ -136,7 +136,7 @@
                         </div>
                     </div>
                     <div class="column">
-                        <img src="img/productos/noquis.jpg" alt="img">
+                        <img src="img/productos/noquis_salsa.jpg" alt="img">
                         <h3>Ñoquis + Salsa a eleccion</h3>
                         <p>1/2 kg. - 3 Porciones.</p>
                         <p>Bolognesa / Champiñones / Pesto / Tomate / Verdeo</p>
@@ -151,7 +151,7 @@
                         </div>
                     </div>
                     <div class="column">
-                        <img src="img/productos/ravioles.jpg" alt="img">
+                        <img src="img/productos/ravioles_salsa.jpg" alt="img">
                         <h3>Ravioles + Salsa a eleccion</h3>
                         <p>1/2 kg. - 3 Porciones.</p>
                         <p>Bolognesa / Champiñones / Pesto / Tomate / Verdeo</p>
