--- a/productos.html
+++ b/productos.html
@@ -62,11 +62,9 @@
             </section>
         </main>
         <!-- productos de joni -->
-        <div class="row full-width">
-            <div class="column column-50">
                 <div class="row productos-destacados-ofertas">
                     <section class="productos">
-                        <h2>Pastas Caseras</h2>
+                        <h2>Pastas Caseras / Salsas</h2>
                         <div class="row">
                             <div class="column">
                                 <img src="img/productos/fideos.jpg" alt="Imagen de producto 1">
@@ -152,18 +150,9 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                    </section> 
-                </div>
-            </div>
-            <div class="column column-50">     
-                <div class="row productos-destacados-ofertas">
-                    <section class="productos">
-                        <h2>Salsas</h2>
-                        <div class="row">
                             <div class="column">
                                 <img src="img/productos/bolognesa.jpg" alt="Imagen de producto 1">
-                                <h3>Bolognesa</h3>
+                                <h3>Salsa Bolognesa</h3>
                                 <p>200 gr. - p/ 3 Porciones.</p>
                                 <h2><b>$ 1300</b></h2>
                                 <div class="contenedor-botones">
@@ -177,7 +166,7 @@
                             </div>
                             <div class="column">
                                 <img src="img/productos/campi.jpg" alt="img">
-                                <h3>Champiñones</h3>
+                                <h3>Salsa Champiñones</h3>
                                 <p>200 gr. - p/ 3 Porciones.</p>
                                 <h2><b>$ 1300</b></h2>
                                 <div class="contenedor-botones">
@@ -191,7 +180,7 @@
                             </div>
                             <div class="column">
                                 <img src="img/productos/pesto.jpg" alt="img">
-                                <h3>Pesto</h3>
+                                <h3>Salsa Pesto</h3>
                                 <p>200 gr. - p/ 3 Porciones.</p>
                                 <h2><b>$ 1300</b></h2>
                                 <div class="contenedor-botones">
@@ -205,7 +194,7 @@
                             </div>
                             <div class="column">
                                 <img src="img/productos/tomate.jpg" alt="img">
-                                <h3>Tomate</h3>
+                                <h3>Salsa Tomate</h3>
                                 <p>200 gr. - p/ 3 Porciones.</p>
                                 <h2><b>$ 1300</b></h2>
                                 <div class="contenedor-botones">
@@ -219,7 +208,7 @@
                             </div>
                             <div class="column">
                                 <img src="img/productos/verdeo.jpg" alt="img">
-                                <h3>Verdeo</h3>
+                                <h3>Salsa Verdeo</h3>
                                 <p>200 gr. - p/ 3 Porciones.</p>
                                 <h2><b>$ 1300</b></h2>
                                 <div class="contenedor-botones">
@@ -233,9 +222,7 @@
                             </div>
                         </div>
                     </section> 
-                </div>
-            </div>
-        </div>
+                </div>  
         <!-- footer octavio -->
         <footer class="footer">
             <div class="footer-container">
@@ -263,3 +250,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
