cambio de octavio

--- a/nosotros.html
+++ b/nosotros.html
@@ -26,11 +26,11 @@
                         <i class="fas fa-bars"></i>
                     </button>
                     <ul class="menu" id="menu">
-                        <li><a href="#">Inicio</a></li>
-                        <li><a href="#">Nosotros</a></li>
-                        <li><a href="#">Productos</a></li>
-                        <li><a href="#">Promos</a></li>
-                        <li><a href="#">Contacto</a></li>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="nosotros.html">Nosotros</a></li>
+                        <li><a href="productos.html">Productos</a></li>
+                        <li><a href="promos.html">Promos</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
             </div>
@@ -146,6 +146,7 @@
         </footer>
     </div>
     <script src="script_nosotros.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
 
